kubernetes/infrastructure/base/test-endpoint/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-1
  namespace: test-endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        testService: service-1
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-index-config
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-index-config
          configMap:
            name: nginx-config-1
