kubernetes/infrastructure/base/test-endpoint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test-endpoint
spec:
  selector:
    app: nginx
    testService: service-1
  type: NodePort
  ports:
    - name: http
      port: 443
      targetPort: 443
      nodePort: 30081
